Fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 html {
   margin: 0;
@@ -53,7 +58,7 @@ textarea {
 
 header {
   text-align: center;
-  margin: 0em auto;
+  margin: 1em auto;
 }
 
 .section {
@@ -112,6 +117,16 @@ input[class='button']:hover {
   transform: scale(1.08);
 }
 
+#bigblank2 {
+  background-color: unset;
+  width: 40%;
+  height: 13em;
+}
+#bigblank {
+  background-color: unset;
+  width: 40%;
+  height: 10em;
+}
 #blank {
   background-color: unset;
   width: 40%;
@@ -196,7 +211,7 @@ note{
 /*  Post-it one  */
 #text1 {
   width: 60%;
-  height: 14em;
+  height: 11em;
   margin: 1em auto;
   padding: 1em;
   border-radius: 2px;
@@ -210,7 +225,7 @@ note{
 #text2 {
 
     width: 40%;
-    height: 17em;
+    height: 14em;
     margin: 1em auto;
     padding: 1em;
     border-radius: 2px;
@@ -230,7 +245,7 @@ note{
     #text3 {
     align-content: start;
       width: 50%;
-      height: 12em;
+      height: 9em;
       margin: 1em auto;
       padding: 1em;
       border-radius: 2px;
